chore: Improve dynamic spacing when drag and dropping and fixed split views UI, b=no-bug, c=tabs, folders

--- a/src/zen/folders/zen-folders.css
+++ b/src/zen/folders/zen-folders.css
@@ -11,117 +11,121 @@ tab-group {
 }
 
 tab-group[split-view-group] {
-  display: flex;
-  flex-wrap: nowrap;
-  border-radius: var(--border-radius-medium);
-  padding: 0 2px;
-  margin-inline: var(--tab-block-margin);
-  margin-block: var(--tab-block-margin);
-  min-height: var(--tab-min-height);
-  outline: var(--tab-outline);
-  outline-offset: var(--tab-outline-offset);
-  outline-color: var(--tab-selected-outline-color);
-  transition: scale 0.1s ease;
-  align-items: center;
   --zen-split-view-active-tab-bg: color-mix(
     in srgb,
     var(--zen-toolbar-element-bg),
     transparent 40%
   );
 
-  :root:not([zen-sidebar-expanded='true']) & {
+  & .tab-group-container {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+
+    border-radius: var(--border-radius-medium);
     padding: 0 2px;
-    --tab-min-height: 30px;
-    --tab-collapsed-width: 38px;
-    margin: 2px 0;
-    --tab-min-width: 34px;
-  }
+    margin-inline: var(--tab-block-margin);
+    margin-block: var(--tab-block-margin);
+    min-height: var(--tab-min-height);
+    outline: var(--tab-outline);
+    outline-offset: var(--tab-outline-offset);
+    outline-color: var(--tab-selected-outline-color);
+    transition: scale 0.1s ease;
 
-  & > .tabbrowser-tab {
-    --tab-selected-bgcolor: var(--zen-split-view-active-tab-bg);
-    --tab-hover-background-color: transparent;
-    --tab-selected-shadow: none;
-    --border-radius-medium: var(--tab-border-radius);
-    --zen-active-tab-scale: 1;
-
-    :root[zen-sidebar-expanded='true'] & {
-      --tab-min-height: 28px;
+    :root:not([zen-sidebar-expanded='true']) & {
+      padding: 0 2px;
+      --tab-min-height: 30px;
+      --tab-collapsed-width: 38px;
+      margin: 2px 0;
+      --tab-min-width: 34px;
     }
-
-    container-type: inline-size;
-    container-name: browser-tab;
-
-    flex: 1 !important;
-    padding-inline: 2px !important;
-    overflow: clip;
-
-    &:not(:last-child)::after {
-      content: '';
-      width: 1px;
-      height: 16px;
-      background-color: light-dark(rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.2));
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    :root:not([zen-sidebar-expanded='true']) &:not(:last-child)::after {
-      width: 16px;
-      height: 1px;
-      top: auto;
-      bottom: 0;
-      right: 50%;
-      transform: translateX(50%);
-    }
-
-    & .tab-content {
-      min-width: 0;
-      :root[zen-sidebar-expanded='true'] & {
-        justify-content: unset !important;
-      }
-    }
-  }
-
-  &:has(> tab:is([visuallyselected], [multiselected])) {
-    background-color: var(--tab-selected-bgcolor);
-    box-shadow: var(--tab-selected-shadow);
 
     & > .tabbrowser-tab {
-      --tab-hover-background-color: var(--zen-split-view-active-tab-bg);
-      & .tab-background {
-        background-color: var(--zen-split-view-active-tab-bg) !important;
+      --tab-selected-bgcolor: var(--zen-split-view-active-tab-bg);
+      --tab-hover-background-color: transparent;
+      --tab-selected-shadow: none;
+      --border-radius-medium: var(--tab-border-radius);
+      --zen-active-tab-scale: 1;
+
+      :root[zen-sidebar-expanded='true'] & {
+        --tab-min-height: 28px;
       }
 
-      &::after {
-        display: none;
+      container-type: inline-size;
+      container-name: browser-tab;
+
+      flex: 1 !important;
+      padding-inline: 2px !important;
+      overflow: clip;
+
+      &:not(:last-child)::after {
+        content: '';
+        width: 1px;
+        height: 16px;
+        background-color: light-dark(rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.2));
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      :root:not([zen-sidebar-expanded='true']) &:not(:last-child)::after {
+        width: 16px;
+        height: 1px;
+        top: auto;
+        bottom: 0;
+        right: 50%;
+        transform: translateX(50%);
+      }
+
+      & .tab-content {
+        min-width: 0;
+        :root[zen-sidebar-expanded='true'] & {
+          justify-content: unset !important;
+        }
       }
     }
-  }
 
-  &:active {
-    scale: var(--zen-active-tab-scale);
-  }
+    &:has(> tab:is([visuallyselected], [multiselected])) {
+      background-color: var(--tab-selected-bgcolor);
+      box-shadow: var(--tab-selected-shadow);
 
-  &:hover {
-    background-color: var(--zen-toolbar-element-bg);
-  }
+      & > .tabbrowser-tab {
+        --tab-hover-background-color: var(--zen-split-view-active-tab-bg);
+        & .tab-background {
+          background-color: var(--zen-split-view-active-tab-bg) !important;
+        }
 
-  & .tab-close-button,
-  & .tab-reset-button {
-    margin-inline-end: -3px !important;
-    display: none !important;
-  }
-
-  @container browser-tab (min-width: 70px) {
-    :root[zen-sidebar-expanded='true'] &:hover > .tabbrowser-tab:not([pinned]) .tab-close-button {
-      display: block !important;
+        &::after {
+          display: none;
+        }
+      }
     }
-  }
 
-  @media (prefers-reduced-motion: no-preference) {
-    #tabbrowser-tabs[movingtab] & {
-      transition: var(--tab-dragover-transition);
+    &:active {
+      scale: var(--zen-active-tab-scale);
+    }
+
+    &:hover {
+      background-color: var(--zen-toolbar-element-bg);
+    }
+
+    & .tab-close-button,
+    & .tab-reset-button {
+      margin-inline-end: -3px !important;
+      display: none !important;
+    }
+
+    @container browser-tab (min-width: 70px) {
+      :root[zen-sidebar-expanded='true'] &:hover > .tabbrowser-tab:not([pinned]) .tab-close-button {
+        display: block !important;
+      }
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      #tabbrowser-tabs[movingtab] & {
+        transition: var(--tab-dragover-transition);
+      }
     }
   }
 }
@@ -217,7 +221,7 @@ zen-folder {
     padding-top: var(--tab-block-margin);
 
     & > * {
-      margin-inline-start: var(--zen-folder-indent, 0.5em);
+      margin-inline-start: var(--zen-folder-indent, 14px);
     }
 
     & > tab::before {
@@ -385,5 +389,12 @@ zen-folder {
   &:last-child {
     border-bottom-left-radius: max(calc(var(--panel-border-radius) - 4px), 4px);
     border-bottom-right-radius: max(calc(var(--panel-border-radius) - 4px), 4px);
+  }
+}
+
+#tabbrowser-tabs[orient='vertical'][expanded] {
+  &[movingtab][movingtab-addToGroup]:not([movingtab-createGroup], [movingtab-ungroup])
+    .tabbrowser-tab:is(:active, [multiselected]) {
+    margin-inline-start: var(--zen-addtabtogroup-margin, 14px) !important;
   }
 }
